<resources>
    <string name="app_name">点球</string>

    <!-- Data—string -->
    <string name="goal">进球</string>
    <string name="event">事件</string>
    <string name="player">球员</string>
    <string name="schdeule">赛事</string>
    <string name="schdeule_team">球队</string>
    <string name="playcount">次播放</string>
    <string name="comment">评论(</string>
    <string name="brackets">)</string>
    <string name="videoplayover">视频播放完成</string>
    <string name="circle">首页</string>
    <string name="schedule1">赛程</string>
    <string name="season">赛季</string>
    <string name="enterphonenumber">请输入手机号码</string>
    <string name="entercode">请输入收到的验证码</string>
    <string name="getcode">短信验证码</string>
    <string name="login">登 录</string>
    <string name="data">数据</string>
    <string name="middle">圈子</string>
    <string name="directseeding">比赛</string>
    <string name="integral">积分</string>
    <string name="topscorer">射手榜</string>

    <string name="my">我的</string>
    <string name="my_settings">设置</string>
    <string name="my_pingfen">评分</string>
    <string name="my_yuyue">我的预约</string>
    <string name="my_follows">我的关注</string>

    <string name="copyright">版权说明</string>
    <string name="privacy">隐私保护</string>
    <string name="respect">关于</string>
    <string name="logout">退出登录</string>
    <string name="filter">筛选</string>
    <string name="season2">赛 季</string>
    <string name="shoot">射门</string>
    <string name="setting">设 置</string>
    <string name="ranking">名次</string>
    <string name="team">球队</string>
    <string name="sai">赛</string>
    <string name="sheng">胜</string>
    <string name="ping">平</string>
    <string name="fu">负</string>
    <string name="last">上一轮</string>
    <string name="pre">下一轮</string>
    <string name="pomen">破门</string>
    <string name="video">视频</string>
    <string name="lives_one">预约</string>
    <string name="lives_two">已预约</string>
    <string name="lives_three">直播中</string>
    <string name="lives_four">已结束</string>
    <string name="lives_nodata">暂时没有赛事进行直播</string>
    <string name="moments">开发中...</string>
    <string name="logout_error">注销失败</string>
    <string name="tongji">比赛数据 </string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="post_tiezi">发帖</string>

    <string name="player_goal">进球</string>
    <string name="player_red_card">红牌</string>
    <string name="player_yellow_card">黄牌</string>
    <string name="player_foul">犯规</string>
    <string name="player_free_kick">任意球</string>
    <string name="player_point">点球</string>
    <string name="player_header">头球</string>
    <string name="player_corner">角球</string>

    <string name="load_footer_end">没有更多啦</string>
    <string name="load_footer_loading">正在加载中…</string>
    <string name="load_footer_fail">加载失败，点击重试</string>
    <string name="comment_hint">说点什么...</string>
    <string name="comment_send">发 送</string>
    <string name="comment_title">评论</string>
    <string name="comment_succend">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="comment_faileds">评论不能为空或空格</string>
    <string name="share_basetitle">精彩内容</string>
    <string name="share_basetitlevideo">精彩视频</string>

    <string name="progress_loading_text1">正在关注</string>
    <string name="progress_loading_text2">正在取消</string>
    <string name="progress_success_text">已关注</string>
    <string name="progress_fail_text">已取消关注</string>
    <string name="progress_fail">关注失败</string>
    <string name="progressmiss_fail">取消失败</string>

    <string name="home_title">点球短视频</string>
    <string name="home_lives">热门比赛</string>
    <string name="home_top">本周十大</string>
    <string name="home_hotvideo">热门视频</string>
    <string name="sure">确定</string>

    <!-- 主页 -->


</resources>
