<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:visibility="gone"
    android:background="@color/title_bg"
    android:orientation="horizontal">

    <TextView
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:paddingLeft="5dp"
        android:text="@string/ranking"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/player"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:layout_marginLeft="70dp"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/textView4" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/team"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/pomen"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/video"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:id="@+id/textView2" />

</RelativeLayout>
