<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_F7">

    <LinearLayout
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@mipmap/setting_copyright"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:text="@string/copyright"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@mipmap/setting_privacy"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:text="@string/privacy"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/respect"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@mipmap/setting_respect"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:text="@string/respect"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:layout_marginBottom="185dp"
        android:text="@string/logout"
        android:textSize="17sp"
        android:clickable="true" />

</LinearLayout>