<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/loading_view_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/ptr_classic_header_rotate_view_progressbar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/load_footer_loading"
            android:textColor="#666666"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/end_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ptr_rotate_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/load_footer_end"
            android:textColor="#666666"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fail_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ptr_rotate_fail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/load_footer_fail"
            android:textColor="#666666"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
