<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray_240"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/statistics_title"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@color/title_bg"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_below="@+id/statistics_title"
        android:id="@+id/RelativeLayout_jinqiu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_goal"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/jinqiu_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/jinqiu_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_jinqiu"
        android:id="@+id/RelativeLayout_hongpai"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_red_card"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/hongpai_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/hongpai_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_hongpai"
        android:id="@+id/RelativeLayout_huangpai"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_yellow_card"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/huangpai_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/huangpai_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_huangpai"
        android:id="@+id/RelativeLayout_fangui"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_foul"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/fangui_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/fangui_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_fangui"
        android:id="@+id/RelativeLayout_renyiqiu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_free_kick"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/renyiqiu_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/renyiqiu_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_renyiqiu"
        android:id="@+id/RelativeLayout_dianqiu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_point"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/dianqiu_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/dianqiu_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_dianqiu"
        android:id="@+id/RelativeLayout_touqiu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_header"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/touqiu_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/touqiu_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/RelativeLayout_touqiu"
        android:id="@+id/RelativeLayout_jiaoqiu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:text="@string/player_corner"
            android:textSize="15sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/jiaoqiu_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/jiaoqiu_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/player_play"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:layout_marginEnd="27dp" />

    </RelativeLayout>
</RelativeLayout>
