<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_data" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/data_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/data_title"
            android:textColor="@color/black"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/schedule1" />

        <TextView
            android:id="@+id/data_integral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/integral" />

        <TextView
            android:id="@+id/data_topscorer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/topscorer" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <include
            android:id="@+id/topview_schedule"
            layout="@layout/topview_schedule"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <include
            android:id="@+id/topview_integral"
            layout="@layout/topview_integral"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <include
            android:id="@+id/topview_topscorer"
            layout="@layout/topview_topscorer"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/data_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/data_content_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray_F7"
            android:background="@color/gray_F7"
            android:dividerHeight="2dp"
            android:visibility="visible"/>

        <ListView
            android:id="@+id/data_content_integral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray_F7"
            android:background="@color/gray_F7"
            android:dividerHeight="2dp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/data_content_topscorer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray_F7"
            android:background="@color/gray_F7"
            android:dividerHeight="2dp"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>
