<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_F7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title_my" />

        <LinearLayout
            android:id="@+id/my_follows"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_follows_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@mipmap/my_follows" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/my_follows"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_right"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_yuyue"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_yuyue_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@mipmap/my_yuyue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/my_yuyue"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_right"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_setting"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_setting_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@mipmap/my_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/my_settings"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_right"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/my_pingfen"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="53dp"-->
            <!--android:layout_marginBottom="3dp"-->
            <!--android:background="@color/white"-->
            <!--android:clickable="true"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:id="@+id/my_pingfen_icon"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:src="@mipmap/my_pingfen" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginStart="9dp"-->
                <!--android:text="@string/my_pingfen"-->
                <!--android:textSize="17sp" />-->
        <!--</LinearLayout>-->

    </LinearLayout>

</ScrollView>

